@@ -17,6 +17,8 @@ Application Changes:
 - A toggle has been added to allow the user to choose if they wish to pay for a lifestyle quality that would be free at their lifestyle level using nuyen instead of Lifestyle Points in accordance with Hard Targets p. 140. Fixes #4916.
 - Setting any values in ReplaceAttribute nodes to 0 now properly does not override those base values for a character's metatype.
 - Spirits with a Force greater than 3 but not divisible by 3 no longer receive an extra optional power. Fixes #4946.
+- Capacity violations for gear located inside armor, armor mods, weapon accessories, cyberware, gear that is already located inside other gear, and any of the aforementioned inside a vehicle are now properly checked when checking character validity.
+- Reported capacity violations from character validity checks now display each item's translated and/or specific name instead of just its general, English name.
 
 Data Changes:
 - Added bonus nodes for Shooter (The Soldier) paragon's Compiling dice pool penalty and +1 limit for attack actions. Fixes #4935.
